--- a/asynic.html
+++ b/asynic.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Md.Tajuddin</h1>
-    <script src="async.js"></script>
+    <!-- <script src="async.js"></script> -->
+     <script src="interval.js"></script>
 </body>
 </html>
